--- a/offense_list/views/offense_list.xml
+++ b/offense_list/views/offense_list.xml
@@ -32,6 +32,7 @@
         <field name="arch" type="xml">
             <tree>
                 <field name="offense_name"/>
+                <field name="description" />
             </tree>
         </field>
     </record>
